fix reflection in locale utils for JDK 12+