@@ -1462,6 +1462,8 @@
     <argLineAllowReflection>--add-opens java.base/java.lang=ALL-UNNAMED
         --add-opens=java.desktop/java.beans=ALL-UNNAMED
         --add-opens=java.base/java.io=ALL-UNNAMED
+        --add-opens=java.base/java.lang=ALL-UNNAMED
+        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
         --add-opens=java.base/java.math=ALL-UNNAMED
         --add-opens=java.base/java.util=ALL-UNNAMED
         --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
